// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Snapshots alert 1`] = `
.emotion-0 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  margin: 0;
  border-color: #c06c00;
  -webkit-transition: 100ms box-shadow;
  transition: 100ms box-shadow;
  box-shadow: inset 0 0 0 2px #ffa126;
}

.emotion-0::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-0::-moz-placeholder {
  color: #5e6a75;
}

.emotion-0:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-0::placeholder {
  color: #5e6a75;
}

.emotion-0:hover {
  border-color: #333d47;
}

.emotion-0:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-0:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-0:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-0:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-0:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-0:disabled::placeholder {
  color: #a1aab3;
}

.emotion-0:hover {
  border-color: #c06c00;
}

.emotion-0:focus:not([disabled]) {
  border-color: #c06c00;
  box-shadow: inset 0 0 0 2px #ffa126, 0 0 0 2px #ffffff, 0 0 0 4px #0875e1;
}

<input
  className="emotion-0 emotion-1"
  type="text"
/>
`;

exports[`TextInput Snapshots error 1`] = `
.emotion-0 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  margin: 0;
  border-color: #de2e21;
  -webkit-transition: 100ms box-shadow;
  transition: 100ms box-shadow;
  box-shadow: inset 0 0 0 1px #de2e21;
}

.emotion-0::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-0::-moz-placeholder {
  color: #5e6a75;
}

.emotion-0:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-0::placeholder {
  color: #5e6a75;
}

.emotion-0:hover {
  border-color: #333d47;
}

.emotion-0:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-0:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-0:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-0:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-0:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-0:disabled::placeholder {
  color: #a1aab3;
}

.emotion-0:hover {
  border-color: #de2e21;
}

.emotion-0:focus:not([disabled]) {
  border-color: #de2e21;
  box-shadow: inset 0 0 0 1px #de2e21, 0 0 0 2px #ffffff, 0 0 0 4px #0875e1;
}

<input
  className="emotion-0 emotion-1"
  type="text"
/>
`;

exports[`TextInput Snapshots grow 1`] = `
.emotion-0 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  margin: 0;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-0::-moz-placeholder {
  color: #5e6a75;
}

.emotion-0:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-0::placeholder {
  color: #5e6a75;
}

.emotion-0:hover {
  border-color: #333d47;
}

.emotion-0:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-0:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-0:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-0:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-0:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-0:disabled::placeholder {
  color: #a1aab3;
}

<input
  className="emotion-0 emotion-1"
  type="text"
/>
`;

exports[`TextInput Snapshots renders as expected 1`] = `
.emotion-0 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  margin: 0;
}

.emotion-0::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-0::-moz-placeholder {
  color: #5e6a75;
}

.emotion-0:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-0::placeholder {
  color: #5e6a75;
}

.emotion-0:hover {
  border-color: #333d47;
}

.emotion-0:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-0:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-0:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-0:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-0:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-0:disabled::placeholder {
  color: #a1aab3;
}

<input
  className="emotion-0 emotion-1"
  type="text"
/>
`;
